# swarm-learning

./: .gitignore  .gitmodules  README.md  config.json
callback-lib/: Cargo.toml
callback-lib/src/: lib.rs
callback-lib/test-callback/: rust2py.py
config/: Cargo.toml
config/src/: lib.rs  runtime.rs
contract/: Recorder.abi  Recorder.bytecode  Recorder.sol  TaskHandler.sol
distribute/: Cargo.toml  README.md
distribute/src/: lib.rs
distribute/src/cluster_resolver/: mod.rs  tfconfig_cluster_resolver.rs
doc/: SL_FLOW.drawio
docker/: bit-swarm-rt.tensorflow.Dockerfile  build.ubuntu.1804.runtime.Dockerfile  cleanup.sh  default.toml  docker-compose-consortium.sl.yml  requirements.txt
docker/config/192.168.1.102/: config.toml  customized_config.toml
docker/config/192.168.1.21/: config.toml  customized_config.toml
docker/config/192.168.1.242/: config.toml  customized_config.toml
docker/config/192.168.1.31/: config.toml  customized_config.toml
docker/script/: file_server.sh  graceful.sh  script.sh  start.sh
grpc-server/: Cargo.toml  README.md  build.rs
grpc-server/src/: lib.rs
grpc-server/src/proto/: mod.rs  swarm_control_service.proto  swarm_control_service.rs
sdk/js-conflux-sdk/: README.md  package-lock.json  package.json
sdk/js-conflux-sdk/src/: Account.js  Conflux.js  Message.js  Transaction.js  index.js
sdk/js-conflux-sdk/src/abi/: HexStream.js  coder.js  index.js
sdk/js-conflux-sdk/src/contract/: Contract.js  ContractABICoder.js  ContractConstructor.js  ContractEvent.js  ContractMethod.js  index.js
sdk/python-sdk/: README.md  requirements.txt  setup.py
sdk/python-sdk/example/: bench.py  send.py
sdk/python-sdk/light_sealer.egg-info/: SOURCES.txt  requires.txt  top_level.txt
sdk/python-sdk/tree_graph/: __init__.py
sdk/rust-sdk/coder/: .gitignore  Cargo.toml
sdk/rust-sdk/coder/coder_lib/: __init__.py
sdk/rust-sdk/coder/src/: decoder.rs  encoder.rs  lib.rs  tests.rs
swarm/config/: Account.json  config.toml
swarm/model/: evaluate_model.py  mnist_tf.py  swarmCBB.py  test.py  utils.py
swarm/model/checkpoints/: README.md
swarm/model/tests/: callback_test.py  contract_test.py  decoder_test.py  encoder_test.py  test_tf.py
swarm/model/utils/: listen_clx_event.py  listen_eth_event.py  listen_eth_tester.py  load_config.py  utils.py  weights_wrapper.py
test_callback/: rust2py.py
tools/calculate-digest/: Cargo.toml
tools/calculate-digest/src/: correct.rs  error.rs  main.rs
tools/coder/: Cargo.toml  setup.py
tools/port-ethabi/: Cargo.toml
tools/port-ethabi/src/: encoder.rs  lib.rs  token.rs  tools.rs
(+132 files in other folders)
