[package]
name = "callback-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "callback_api"
crate-type = ["cdylib"]

[dependencies]
# anyhow          = { version = "1.0.26" }

grpc-server = { path = "../grpc-server" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module", "anyhow"]