[package]
name = "calculate-digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt   = { version = "0.3.26" }
hex         = { version = "0.4.3" }
secp256k1   = { version = "0.21.3" }

ring = "0.16.20"
openssl = "0.10.38"

[[bin]]
name = "correct"
path = "src/correct.rs"
