[package]
name = "port-ethabi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ethabi = { version = "16.0.0", path = "../../third_party/ethabi/ethabi" }
hex = "0.4"
sha3 = "0.9"
structopt = "0.3"
itertools = "0.10"

[dev-dependencies]
hex-literal = "0.3"
