[package]
name = "coder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "coder_lib"
crate-type = ["cdylib"]

[dependencies]
port-ethabi = { path = "../../../tools/port-ethabi/" }
hex = "0.4"

# for test
ethereum-types = { version = "0.12.0", default-features = false } 

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module", "anyhow"]



[[bin]]
name = "test"
path = "src/tests.rs"
